src/test/deca/context/invalid/resultats/test_invalid_extends-cont.res
./src/test/deca/context/invalid/test_invalid_extends.deca:14:0: A's superclass is not of type class 
